# mcp-harmony-context

./: .env.example  .gitignore  CLAUDE.md  MILO_GOAL.md  README.md  harmony-mcp-config.json  install-harmony-mcp.sh  install.sh  main.py  milo  milo-dashboard.html  pyproject.toml  run-harmony-setup.py  setup-harmony-mcp.py  setup-harmony-mcp.sh
harmony-scripts/: MiloBackgrounds.js  MiloCamera.js  MiloDrawings.js  MiloExpressions.js  MiloMasterRun.js  MiloRig.js  MiloSceneVisibility.js  MiloSetup.js  README.md
scripts/: fetch_harmony_docs.py  validate_harmony_api.py
tests/: conftest.py  test_main.py
tests/fixtures/help/extended/ScriptAPIDemos/: TB_ExportCamera.js
tests/fixtures/help/script/: annotated.html  classscene.html
